--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.19.0",
+    "eslint-plugin-vue": "^9.2.0",
     "nuxt": "3.0.0-rc.5",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.7.4",
+    "vite-plugin-eslint": "^1.6.1"
   }
 }
