--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "3.0.0-rc.5",
     "postcss": "^8.4.14",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "vite-plugin-eslint": "^1.6.1"
